--- a/Cloudents.Infrastructure.Test/packages.config
+++ b/Cloudents.Infrastructure.Test/packages.config
@@ -16,7 +16,7 @@
   <package id="Microsoft.Extensions.Logging.Abstractions" version="2.0.0" targetFramework="net471" />
   <package id="Microsoft.Extensions.Options" version="2.0.0" targetFramework="net471" />
   <package id="Microsoft.Extensions.Primitives" version="2.0.0" targetFramework="net471" />
-  <package id="Moq" version="4.7.0" targetFramework="net471" />
+  <package id="Moq" version="4.8.0" targetFramework="net471" />
   <package id="MSTest.TestAdapter" version="1.2.0" targetFramework="net471" />
   <package id="MSTest.TestFramework" version="1.2.0" targetFramework="net471" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net471" />
@@ -41,4 +41,5 @@
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.4.0" targetFramework="net471" />
   <package id="System.Runtime.Extensions" version="4.1.0" targetFramework="net471" />
   <package id="System.Threading" version="4.0.11" targetFramework="net471" />
+  <package id="System.Threading.Tasks.Extensions" version="4.4.0" targetFramework="net471" />
 </packages>
