--- a/Cloudents.Infrastructure.Framework/Cloudents.Infrastructure.Framework.csproj
+++ b/Cloudents.Infrastructure.Framework/Cloudents.Infrastructure.Framework.csproj
@@ -48,6 +48,7 @@
     <Compile Include="ImageProcessor.cs" />
     <Compile Include="IocModule.cs" />
     <Compile Include="PdfProcessor.cs" />
+    <Compile Include="PowerPoint2007Processor.cs" />
     <Compile Include="Processor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WordProcessor.cs" />
